# Particle2D

./: .gitignore  CMakeLists.txt  README.md
include/math3d/: angle.h  basic_vector.h  chain_base.h  line3d.h  math3d.h  matrix33.h  matrix34.h  nonbool_traits.h  oneway_operators.h  plane.h  quaternion.h  trigonomety.h  vector2d.h  vector3d.h  vector4d.h
ios/: CMakeLists.txt  CppObjectiveBridge.cpp  CppObjectiveBridge.h  IOSParticleRenderer.cpp  IOSParticleRenderer.h
src/: CMakeLists.txt  CParticleBasicInitializer.cpp  CParticleBasicInitializer.h  CParticleBoxInitializer.cpp  CParticleBoxInitializer.h  CParticleEmitter.cpp  CParticleEmitter.h  CParticleFadeOutAffector.cpp  CParticleFadeOutAffector.h  CParticleGeometricInitializer.cpp  CParticleGeometricInitializer.h  CParticleSpeedInitializer.cpp  CParticleSpeedInitializer.h  CParticleSystem2D.cpp  CParticleSystem2D.h  CTimeRange.h  IDistribution.h  IParticleAffector.h  IParticleInitializer.h  IParticleRenderer.h  Particle2D.h  Randomizer.cpp  Randomizer.h  ReferenceCounted.h  SFixedPointColor.h  SParticle.h  iptr.h
test/: CMakeLists.txt  main.cpp
