# ADD_FILTER(...	IOS_PARTICLE_RENDER_SOURCE)

INCLUDE_DIRECTORIES(
	../src/
	../include/)

# LINK_DIRECTORIES(...)

FILE(GLOB ROOT_SRC FOLLOW_SYMLINKS *.cpp *.h)
SET(IOS_PARTICLE_RENDER_SOURCE ${IOS_PARTICLE_RENDER_SOURCE} ${ROOT_SRC})	# add root files

if (MSVC)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Za")
endif()

ADD_LIBRARY(iosRender STATIC ${IOS_PARTICLE_RENDER_SOURCE})

# TARGET_LINK_LIBRARIES(crossParticle ...)
