# ADD_FILTER(...	PARTICLE2D_SRC)

INCLUDE_DIRECTORIES(
	./
	../include/
	$ENV{BOOST_ROOT})

# LINK_DIRECTORIES(...)

FILE(GLOB ROOT_SRC FOLLOW_SYMLINKS *.cpp *.h)
SET(PARTICLE2D_SRC ${PARTICLE2D_SRC} ${ROOT_SRC})	# add root files

if (MSVC)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Za")
endif()

ADD_LIBRARY(particle2d STATIC ${PARTICLE2D_SRC})

# TARGET_LINK_LIBRARIES(crossParticle ...)
