# ADD_FILTER(...	TEST_SRC)

INCLUDE_DIRECTORIES(
	../src/
	../include/
	$ENV{BOOST_ROOT}
	$ENV{GLEW_ROOT}include )

# LINK_DIRECTORIES(...)

FILE(GLOB ROOT_SRC FOLLOW_SYMLINKS *.cpp *.h)
SET(TEST_SRC ${TEST_SRC} ${ROOT_SRC})	# add root files

LINK_DIRECTORIES($ENV{GLEW_ROOT}lib/Release/Win32/)

ADD_EXECUTABLE(test ${TEST_SRC})

TARGET_LINK_LIBRARIES(test particle2d glew32)

ADD_CUSTOM_COMMAND(TARGET test POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy "$ENV{GLEW_ROOT}bin/Release/Win32/glew32.dll" $<TARGET_FILE_DIR:test>)
